# la-milanesa

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vercel.json
backend/: Makefile  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg  vercel.json
backend/api/: views.py
backend/core/: settings.py
frontend/: package.json
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/src/: app.css  app.html
frontend/src/components/: Article.svelte
frontend/src/lib/plotly/: load.ts  split-title.ts
frontend/src/lib/stores/: dynamicLogo.ts
frontend/src/routes/articulo/: articles.ts
src/: app.css  app.html
src/components/: Article.svelte  ArticleCard.svelte  HighlightedParagraph.svelte  ParticlesBackground.svelte  PhotoCredit.svelte  SocialButtons.svelte  Table.svelte  ThemeController.svelte  types.ts
src/components/plots/: CalendarHeatmap.svelte  LinesPlot.svelte
src/lib/: colors.ts
src/lib/stores/: dynamicLogo.ts  isMobile.ts  logoVariants.ts
src/lib/stores/articles/: legislatorsSimilarityMatrix.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/api/articles/: +server.ts
src/routes/articulo/: +layout.svelte  articles.ts  index.js
src/routes/articulo/50-veces-nunca-mas/: +page.svelte
src/routes/articulo/antiperonismo-y-bahia-blanca/: +page.svelte
src/routes/articulo/hacerle-el-juego-a-la-derecha/: +page.svelte  legislatorPercentagesByBucket.ts  legislatorsByParty.ts  parliamentaryBlocs.ts  partyColors.ts  (+6 more)
(+54 files in other folders)
